# cycleformers

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml  temp.ipynb  trufflehog.yaml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/actions/setup-poetry/: action.yml
.github/workflows/: build-docs.yml  checks.yml  ci_workflow.yml  development.yml  pull-request.yml  release.yml  test.yml  trufflehog.yml
api_reference/configuration/: index.html
api_reference/cycle_trainer/: index.html
benchmarks/: benchmark_slurm.sh  conda-env.yaml  experiment_benchmarks.py  trainer_benchmarks.py
benchmarks/configs/: exp_config.yaml
benchmarks/profiling/: README.md  profiler_utils.py
conceptual_reference/: index.html
conceptual_reference/cycle_consistency_training/: index.html
conceptual_reference/macct/: index.html
docs/: index.md  installation.md  performance.md  usage.md
docs/api_reference/: cycle_trainer.md  cycles.md  index.md  task_processors.md
docs/assets/: macct_animations.py  render_animations.sh
docs/blog/: index.md
docs/conceptual_reference/: cycle_consistency_training.md  evaluation.md  index.md  macct.md  task_processors.md
docs/examples/: cycle_ner.md  index.md  wmt_2014.md
docs/reference/: cycle_trainer.md  macct.md
examples/: index.html  new_example.py  prepare_data.py
examples/configs/: causal.yaml  causal_macct.yaml  macct.yaml  seq2seq.yaml  seq2seq_macct.yaml
examples/cycle_ner/: train.py
examples/scripts/: README.md  macct.py
examples/translation_wmt14/: prepare_data.py  train.py
installation/: index.html
performance/: index.html
src/CycleFormers/: __init__.py  cycle_trainer.py  cycle_training_args.py
src/CycleFormers/models/: __init__.py  peft_models.py
src/cycleformers/: __init__.py  cycle_trainer.py  cycle_trainer_utils.py  cycle_training_arguments.py  data_config.py  exceptions.py  import_utils.py  model_config.py  trainer_callback.py  types.py  utils.py
src/cycleformers/command/: __init__.py  cli_utils.py
src/cycleformers/cycles/: __init__.py  cycles.py  utils.py
src/cycleformers/data/: __init__.py  datasets.py  samplers.py  utils.py
src/cycleformers/models/: __init__.py  peft_models.py
src/cycleformers/task_processors/: __init__.py  auto.py  base.py  ner.py  translation.py
src/cycleformers/trainer/: __init__.py  cycle_config.py  cycle_trainer.py  cycle_trainer_new.py  cycle_training_arguments.py  macct_config.py  model_config.py  trainer_callback.py  utils.py
tests/: conftest.py  models_to_test.yaml  test_cycle_trainer_save.py  test_examples.py  test_peft_models.py  test_utils.py
tests/benchmark/: benchmark_tokenizer_skip.py  benchmark_utils.py  cycle_trainer_profiling.py
tests/benchmark/profiler_configs/: causal.yaml  causal_macct.yaml
tests/command/: test_cli_utils.py
tests/configs/: test_model_config.py
tests/sample_data/: generate_sample_data.py  wmt14_samples.json
tests/sample_data/conll2003/test/: data-00000-of-00001.arrow  state.json
tests/sample_data/conll2003/train/: state.json
tests/sample_data/conll2003/validation/: data-00000-of-00001.arrow  state.json
tests/sample_data/wmt14/test/: state.json
tests/sample_data/wmt14/train/: data-00000-of-00001.arrow  state.json
tests/sample_data/wmt14/validation/: data-00000-of-00001.arrow  dataset_info.json  state.json
tests/task_processors/: test_auto.py  test_ner_processors.py  test_translation_processors.py  utils.py
tests/task_processors/sample_data/: conll2003_samples.json
tests/task_processors/sample_data/conll2003/train/: data-00000-of-00001.arrow  state.json
tests/task_processors/sample_data/wmt14/test/: data-00000-of-00001.arrow
tests/testing_utils/: custom_marks.py  model_registry.py  performance_trackers.py  test_model_registry.py
tests/trainer/: test_cycle_trainer.py  test_cycle_trainer_save.py  test_prepare_cycle_inputs.py
tests/utils/: test_utils.py
usage/: index.html
